# gakkou

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
.github/workflows/: docker.yml  linux.yml  macos.yml  windows.yml
ci/: Makefile  README.md
ci/docker/alpine/: Dockerfile
ci/docker/archlinux/: Dockerfile
ci/docker/ubuntu/: Dockerfile
cmake/: GakkouConfig.cmake.in
docker/: Dockerfile  README.md
src/: MultiplyWidget.cpp  MultiplyWidget.hpp  SumWidget.cpp  SumWidget.hpp  main.cpp
